[tool.poetry]
name = "plainews"
version = "0.3.0"
description = "Distraction and clutter free reading"
authors = ["Nikola <nikola@kumulintelligence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.83.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
textual-dev = "^1.6.0"

[project]
name = "plainews"
version = "0.1.0"
authors = [
  { name="Nikola Sobadjiev", email="nikola@kumulintelligence.com" },
]
description = "Distraction and clutter free reading"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
